--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ body{
     margin-left: 40px;
     margin-right: 50px;
     transition: .5s;
+    padding-right: 50px;
 }
 .navigation .buttonLogin:hover {
     background: #fff;
